--- a/app/src/main/res/layout/taoyu.xml
+++ b/app/src/main/res/layout/taoyu.xml
@@ -207,7 +207,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/comment"
+                    android:id="@+id/comment_num"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
