--- a/app/src/main/res/layout/taoyu_goods_list_item2.xml
+++ b/app/src/main/res/layout/taoyu_goods_list_item2.xml
@@ -55,7 +55,7 @@
                 android:layout_marginTop="12dp">
 
                 <TextView
-                    android:id="@+id/doods_comm_content"
+                    android:id="@+id/goods_comm_content"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:ellipsize="end"
@@ -100,7 +100,7 @@
                         android:background="@drawable/comment" />
 
                     <TextView
-                        android:id="@+id/goods_comm"
+                        android:id="@+id/goods_comm_num"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
