--- a/app/src/main/res/layout/activity_goods_detail.xml
+++ b/app/src/main/res/layout/activity_goods_detail.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.gjf.lovezzu.activity.taoyu.TaoyuDetialActivity">
+
+
+<FrameLayout
+    android:layout_weight="4"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    >
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -153,12 +162,7 @@
         </LinearLayout>
     </ScrollView>
 
-    <LinearLayout
-        android:layout_gravity="bottom"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <include layout="@layout/topic_botton"/>
-    </LinearLayout>
+
 
     <ImageView
         android:id="@+id/buybutton"
@@ -173,3 +177,10 @@
 
 
 </FrameLayout>
+    <LinearLayout
+        android:layout_gravity="bottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <include layout="@layout/topic_botton"/>
+    </LinearLayout>
+</LinearLayout>
