--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -1,66 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp"
+    app:cardCornerRadius="4dp">
 
     <LinearLayout
+        android:layout_margin="10dp"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:text="卖家名称"
-            android:textSize="25sp"
-            android:id="@+id/seller_name"
-            android:layout_marginLeft="20dp"
+            android:text="商品类型"
+            android:textSize="19sp"
+            android:id="@+id/shop_car_goods_type"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="5dp"/>
+        <TextView
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="删除"
+            android:gravity="right"
+            android:textSize="19sp"
+            android:id="@+id/shop_car_delete"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="5dp"/>
     </LinearLayout>
-    <include layout="@layout/item_cut"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#999999" />
     <LinearLayout
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_margin="10dp">
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1.6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
             android:id="@+id/good_Image"/>
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_weight="1">
             <TextView
-                android:layout_width="wrap_content"
+                android:textColor="#303030"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="商品名称"
-                android:textSize="24sp"
+                android:textSize="20sp"
                 android:id="@+id/cart_good_name"
-                android:textStyle="bold"
                 android:layout_margin="5dp"
                 />
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="简介或型号"
-                android:textSize="18sp"
+                android:text="描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述"
+                android:ellipsize="end"
+                android:maxEms="18"
+                android:maxLines="2"
+                android:textSize="17sp"
                 android:layout_margin="5dp"/>
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="￥"
-            android:textSize="21sp"
-            android:layout_weight="1"/>
+            android:gravity="right"
+            android:textColor="#f77a31"
+            android:textSize="18sp"
+            />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="123"
+            android:textColor="#f77a31"
             android:layout_weight="1"
             android:textSize="20sp"
             android:id="@+id/goods_price"/>
@@ -73,4 +98,4 @@
         android:background="#FFE6E1E1">
 
     </LinearLayout>
-</LinearLayout>
+</android.support.v7.widget.CardView>
