--- a/app/src/main/res/layout/person_fragment.xml
+++ b/app/src/main/res/layout/person_fragment.xml
@@ -127,7 +127,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
+                android:id="@+id/user_shop_car"
                 android:layout_weight="1"
                 android:background="#fffffc">
 
@@ -147,7 +147,7 @@
                     android:layout_gravity="center"
                     android:layout_marginLeft="6dp"
                     android:layout_weight="4"
-                    android:text="做任务" />
+                    android:text="购物车" />
 
                 <ImageView
                     android:layout_width="0dp"
@@ -158,6 +158,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/user_shop_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="1dp"
@@ -181,7 +182,7 @@
                     android:layout_gravity="center"
                     android:layout_marginLeft="6dp"
                     android:layout_weight="4"
-                    android:text="校园币" />
+                    android:text="我的订单" />
 
                 <ImageView
                     android:layout_width="0dp"
