--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
+     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     app:cardCornerRadius="4dp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
     <LinearLayout
+        android:layout_weight="3"
         android:layout_margin="10dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -36,16 +41,17 @@
         android:layout_height="1dp"
         android:background="#999999" />
     <LinearLayout
-
+        android:id="@+id/cart_goods_body"
+        android:layout_weight="9"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_margin="10dp">
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="2"
-            android:id="@+id/good_Image"/>
+            android:id="@+id/cart_goods_image"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -57,13 +63,14 @@
                 android:layout_height="wrap_content"
                 android:text="商品名称"
                 android:textSize="20sp"
-                android:id="@+id/cart_good_name"
+                android:id="@+id/cart_goods_name"
                 android:layout_margin="5dp"
                 />
             <TextView
+                android:id="@+id/cart_goods_desc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述"
+                android:text="描述描述描述描述"
                 android:ellipsize="end"
                 android:maxEms="18"
                 android:maxLines="2"
@@ -88,14 +95,9 @@
             android:textColor="#f77a31"
             android:layout_weight="1"
             android:textSize="20sp"
-            android:id="@+id/goods_price"/>
+            android:id="@+id/cart_goods_price"/>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="4dp"
-        android:background="#FFE6E1E1">
-
     </LinearLayout>
 </android.support.v7.widget.CardView>
