--- a/app/src/main/res/layout/activity_goods_detail.xml
+++ b/app/src/main/res/layout/activity_goods_detail.xml
@@ -7,11 +7,15 @@
     android:orientation="vertical"
     tools:context="com.gjf.lovezzu.activity.taoyu.TaoyuDetialActivity">
 
-
-<FrameLayout
+<android.support.v4.widget.SwipeRefreshLayout
+    android:id="@+id/goods_datail_refresh"
     android:layout_weight="4"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="wrap_content">
+<FrameLayout
+
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     >
 
     <ScrollView
@@ -20,7 +24,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <include
@@ -177,6 +181,7 @@
 
 
 </FrameLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
     <LinearLayout
         android:layout_gravity="bottom"
         android:layout_width="match_parent"
