--- a/app/src/main/res/layout/goods_child_comm_item.xml
+++ b/app/src/main/res/layout/goods_child_comm_item.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+   <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     app:cardCornerRadius="4dp">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
-
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="wrap_content">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="1dp"
@@ -29,7 +27,7 @@
             android:orientation="horizontal">
 
             <com.gjf.lovezzu.view.CircleImageView
-                android:id="@+id/goods_comm_user_icon"
+                android:id="@+id/child_comm_user_icon"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center_vertical"
@@ -37,7 +35,7 @@
                 android:src="@drawable/def_avatar" />
 
             <TextView
-                android:id="@+id/goods_comm_user_nickname"
+                android:id="@+id/child_comm_user_nickname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -64,10 +62,12 @@
                 android:layout_marginTop="12dp">
 
                 <TextView
-                    android:id="@+id/goods_comm_content"
+                    android:id="@+id/child_comm_content"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:ellipsize="end"
+                    android:maxEms="18"
+                    android:maxLines="2"
                     android:text="这是讨论啊啊."
                     android:textSize="18sp" />
 
@@ -88,7 +88,7 @@
 
 
                     <TextView
-                        android:id="@+id/goods_comm_time"
+                        android:id="@+id/child_comm_time"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -109,20 +109,19 @@
                         android:background="@drawable/comment" />
 
                     <TextView
-                        android:id="@+id/goods_comm_num"
+                        android:id="@+id/child_comm_num"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_marginLeft="8dp"
                         android:text="XXX" />
                     <ImageView
-                        android:layout_marginLeft="10dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@drawable/life_zan" />
 
                     <TextView
-                        android:id="@+id/goods_comm_zan"
+                        android:id="@+id/child_comm_zan"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -132,6 +131,5 @@
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-
 </LinearLayout>
 </android.support.v7.widget.CardView>
