--- a/app/src/main/res/layout/main_my_user_view.xml
+++ b/app/src/main/res/layout/main_my_user_view.xml
@@ -11,7 +11,7 @@
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="3dp"
         android:layout_weight="1"
-        android:src="@drawable/test_banner" />
+        android:src="@drawable/def_avatar" />
 
     <LinearLayout
         android:layout_width="0dp"
