--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -30,7 +30,7 @@
         android:layout_weight="1"
         android:layout_width="match_parent"
         android:id="@+id/order_activity"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"/>
 
-    </FrameLayout>
+
 </LinearLayout>
