--- a/app/src/main/res/layout/activity_school_news2.xml
+++ b/app/src/main/res/layout/activity_school_news2.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ProgressBar
@@ -10,11 +10,12 @@
         android:max="100"
         android:layout_width="match_parent"
         android:layout_height="10dp" />
-    <WebView
-        android:id="@+id/news_show"
+    <FrameLayout
+        android:id="@+id/webView_frame"
         android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </WebView>
+        android:layout_height="wrap_content">
+    </FrameLayout>
+
 
 </LinearLayout>
