--- a/app/src/main/res/layout/school_society_item.xml
+++ b/app/src/main/res/layout/school_society_item.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     app:cardCornerRadius="4dp">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -12,52 +13,60 @@
 
         <LinearLayout
             android:id="@+id/news_body"
-            android:layout_weight="9"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_margin="10dp">
+            android:layout_margin="10dp"
+            android:layout_weight="9"
+            android:orientation="horizontal">
+
             <ImageView
+                android:src="@drawable/def_avatar"
+                android:id="@+id/news_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="2"
-                android:id="@+id/news_image"/>
+                android:layout_weight="2" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:orientation="vertical">
+
                 <TextView
-                    android:textColor="#303030"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="标题"
-                    android:textSize="16sp"
                     android:id="@+id/news_title"
-                    android:layout_margin="5dp"
-                    />
-                <TextView
-                    android:id="@+id/news_desc"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="描述描述描述描述"
+                    android:layout_margin="5dp"
+                    android:text="标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题"
                     android:ellipsize="end"
-                    android:maxEms="18"
+                    android:maxEms="10"
                     android:maxLines="3"
-                    android:textSize="14sp"
-                    android:layout_margin="5dp"/>
+                    android:textColor="#303030"
+                    android:textSize="16sp" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp">
+
                     <TextView
-                        android:layout_marginLeft="5dp"
+                        android:id="@+id/news_time"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="123"
+                        android:layout_marginLeft="5dp"
                         android:layout_weight="1"
-                        android:textSize="13sp"
-                        android:id="@+id/news_time"/>
+                        android:text="2017-08-06 09:27"
+                        android:textSize="13sp" />
+
+                    <TextView
+                        android:id="@+id/news_author"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:layout_weight="1"
+                        android:gravity="right"
+                        android:text="央视网"
+                        android:textSize="13sp" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
