--- a/app/src/main/res/layout/person_fragment.xml
+++ b/app/src/main/res/layout/person_fragment.xml
@@ -227,6 +227,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/user_publish_goods_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="1dp"
@@ -250,7 +251,7 @@
                     android:layout_gravity="center"
                     android:layout_marginLeft="6dp"
                     android:layout_weight="4"
-                    android:text="买卖记录" />
+                    android:text="我的发布" />
 
                 <ImageView
                     android:layout_width="0dp"
