--- a/app/src/main/res/layout/order_buy_info_activity.xml
+++ b/app/src/main/res/layout/order_buy_info_activity.xml
@@ -101,7 +101,31 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#999999" />
-
+    <LinearLayout
+        android:layout_margin="5dp"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+            <TextView
+                android:layout_weight="1"
+                android:text="总计："
+                android:gravity="right|center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent" />
+            <TextView
+                android:gravity="center_vertical"
+                android:textColor="#f77a31"
+                android:layout_weight="1"
+                android:text="888"
+                android:textSize="18sp"
+                android:id="@+id/order_buy_total"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent" />
+    </LinearLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#999999" />
     <LinearLayout
         android:layout_margin="5dp"
         android:layout_width="match_parent"
