--- a/app/src/main/res/layout/order_buy_item.xml
+++ b/app/src/main/res/layout/order_buy_item.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="5dp"
     app:cardCornerRadius="5dp">
     <LinearLayout
         android:orientation="vertical"
@@ -114,7 +115,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <android.support.v7.widget.CardView
-            android:background="#65b5fc"
             android:id="@+id/buy_item_call"
             android:layout_width="match_parent"
             android:layout_height="30dp"
@@ -123,7 +123,7 @@
             <TextView
                 android:gravity="center"
                 android:layout_gravity="center"
-                android:text="联系买家"
+                android:text="联系卖家"
                 android:textSize="20sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
